--- a/CodeKY_Hangman/MainWindow.xaml
+++ b/CodeKY_Hangman/MainWindow.xaml
@@ -35,6 +35,7 @@
         <Button x:Name="WKey" Content="W" HorizontalAlignment="Left" Margin="59,299,0,0" VerticalAlignment="Top" Height="39" Width="39.6233333333333" Click="WKey_Click"/>
         <TextBox x:Name="wordDisplayTB" HorizontalAlignment="Left" Margin="109,253,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="320" Height="41"/>
         <ListBox x:Name="usedLettersLB" Margin="14,88,701,140"/>
+        <TextBox x:Name="hangmanImage" HorizontalAlignment="Left" Margin="269,88,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="160" Height="160"/>
 
     </Grid>
 </Window>
