--- a/CodeKY_Hangman/MainWindow.xaml
+++ b/CodeKY_Hangman/MainWindow.xaml
@@ -33,9 +33,10 @@
         <Button x:Name="RKey" Content="R" HorizontalAlignment="Left" Margin="149,299,0,0" VerticalAlignment="Top" Height="39" Width="39.6233333333333" Click="RKey_Click"/>
         <Button x:Name="EKey" Content="E" HorizontalAlignment="Left" Margin="104,299,0,0" VerticalAlignment="Top" Height="39" Width="39.6233333333333" Click="EKey_Click"/>
         <Button x:Name="WKey" Content="W" HorizontalAlignment="Left" Margin="59,299,0,0" VerticalAlignment="Top" Height="39" Width="39.6233333333333" Click="WKey_Click"/>
-        <TextBox x:Name="wordDisplayTB" HorizontalAlignment="Left" Margin="109,253,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="320" Height="41"/>
+        <TextBox x:Name="wordDisplayTB" HorizontalAlignment="Left" Margin="109,253,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="320" Height="41" TextAlignment="Center" IsReadOnly="True"/>
         <ListBox x:Name="usedLettersLB" Margin="14,59,701,140"/>
-        <ListBox x:Name="hangmanImageLB" Margin="309,59,371,186" HorizontalContentAlignment="Right"/>
+        <ListBox x:Name="hangmanImageLB" Margin="109,80,496,186" HorizontalContentAlignment="Right" Width="195" Height="168.04" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <TextBox HorizontalAlignment="Left" Margin="109,59,0,0" Text="Code Kentucky Hangman" TextWrapping="Wrap" VerticalAlignment="Top" Width="195" Height="21" TextAlignment="Center" IsReadOnly="True"/>
 
     </Grid>
 </Window>
